# ist

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-02-ist-downloader-implementation.md
docs/superpowers/specs/: 2026-07-02-ist-downloader-design.md
ist-cli/: Cargo.toml
ist-cli/src/: main.rs
ist-core/: Cargo.toml
ist-core/src/: error.rs  lib.rs  progress.rs
ist-core/src/config/: mod.rs  types.rs
ist-core/src/download/: mod.rs  scheduler.rs  segment.rs  task.rs
ist-core/src/protocol/: ftp.rs  http.rs  mod.rs
ist-core/tests/: integration_test.rs
