[package]
name = "ist-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ist"
path = "src/main.rs"

[dependencies]
ist-core = { path = "../ist-core" }
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
